some 'set but not used' compilation fixes
This issue was migrated from bug 5858 in our old bug tracker.
Original bug information:
Reporter: Yaniv Kaul
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
radcom.c.diff: wiretap/radcom.c patch
ngsniffer.c.diff: wiretap/ngsniffer.c patch
semcheck.c.diff: epan/dfilter/semcheck.c patch
packet-6lowpan.c.diff: epan/dissectors/packet-6lowpan.c patch
packet-9p.c.diff: epan/dissectors/packet-9p.c patch
packet-aarp.c.diff: epan/dissectors/packet-aarp.c patch
packet-acn.c.diff: epan/dissectors/packet-acn.c patch
packet-aim-messaging.c.diff: epan/dissectors/packet-aim-messaging.c patch
packet-aim-ssi.c.diff: epan/dissectors/packet-aim-ssi.c patch
packet-ajp13.c.diff: epan/dissectors/packet-ajp13.c patch
packet-ansi_683.c.diff: epan/dissectors/packet-ansi_683.c patch
packet-ansi_a.c.diff: epan/dissectors/packet-ansi_a.c patch
packet-bacapp.c.diff: epan/dissectors/packet-bacapp.c patch
packet-bacnet.c.diff: epan/dissectors/packet-bacnet.c patch
packet-ber.c.diff: epan/dissectors/packet-ber.c patch
packet-bgp.c.diff: epan/dissectors/packet-bgp.c patch
packet-bittorent.c.diff: epan/dissectors/packet-bittorrent.c patch
packet-bmc.c.diff: epan/dissectors/packet-bmc.c patch
packet-bssgp.c.diff: epan/dissectors/packet-bssgp.c patch
packet-btsdp.c.diff: epan/dissectors/packet-btsdp.c patch
packet-ccsds.c.diff: epan/dissectors/packet-ccsds.c patch
packet-cip.c.diff: epan/dissectors/packet-cip.c patch
packet-clnp.c.diff: epan/dissectors/packet-clnp.c patch
packet-cmpp.c.diff: epan/dissectors/packet-cmpp.c patch
packet-componentstatus.c.diff: epan/dissectors/packet-componentstatus.c patch
packet-cpha.c.diff: epan/dissectors/packet-cpha.c patch
packet-ber.c.diff.2: epan/dfilter/packet-ber.c patch
packet-dcc.c.diff: epan/dissectors/packet-dcc.c patch
packet-dns.c.diff: epan/dissectors/packet-dns.c patch
packet-dnp.c.diff: epan/dissectors/packet-dnp.c patch