Use rcode instead of repeated uses of "flags & F_RCODE".  One change submitted from Yaniv Kaul via bug 5858; the other 2 from me.

svn path=/trunk/; revision=37097